# DNA

./: .claudeignore  .component-contracts.example  .gitignore  .vercelignore  CLAUDE.md  LICENSE  README.md  canvas-patterns.md  color-compare.html  context-reset-prompt.md  dnd-table.html  eslint.rdna.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  radapp-pitch.html  skills-lock.json  turbo.json  vitest.config.ts
.claude/: CLAUDE.md  launch.json  settings.json
.collaborator/: config.json
.flow/: .checkpoint-fn-1-slv.json  .checkpoint-fn-2-zcd.json  config.json  meta.json
.flow-old/: .checkpoint-fn-3-y8e.json
.githooks/: post-checkout  post-merge  pre-commit  pre-push
.playwright-mcp/: page-2026-04-14T18-55-07-269Z.yml  page-2026-04-15T16-36-31-571Z.yml  page-2026-04-15T16-49-49-085Z.yml  page-2026-04-15T17-18-59-543Z.yml
archive/: README.md
docs/: CODEMAP.md  README.md  corner-model.md  design-system-infrastructure.md  dna-conversion-guide.md  fn4-strategic-review.md  fn7-comparison.md  git-commands-diagram.mmd  manifesto-draft.md  manifesto-questions.md  migration-guide-rad_os.md  pixel-corners.md  plan-review-fixes.md  production-readiness-checklist.md  production-readiness-execution-track.md  production-readiness-interview.md  production-readiness-mixed-track.md  production-readiness-research-track.md  rad-os-authoring.md  rdna-ctrl-handoff.md  theme-spec.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: components.rs  mod.rs  violations.rs  watcher.rs
src-tauri/src/types/: mod.rs
(+3612 files in other folders)
